Fix #24